Some setup for native executable.